Improved style, added Mongo, and started working on component rendering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,10 @@ html {
   overflow: scroll;
 }
 
+.subscriptionBox::-webkit-scrollbar { 
+    display: none; 
+}
+
 .videoTile {
   display: inline-block;
   margin-right: 10px;
