--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,35 +19,32 @@ html {
   margin: 25px auto auto auto;
   width: 90%;
   height: 100%;
-
 }
 
 .subscriptionBox {
   display: block;
   position: relative;
   margin: 20px auto 20px auto;
-
   width: 100%;
   height: 375px;
   overflow: scroll;
 }
 
 .subscriptionBox::-webkit-scrollbar { 
-    display: none; 
+  display: none;
 }
 
 .channelBox {
   display: block;
   position: relative;
   margin: 20px auto 20px auto;
-
   width: 100%;
   height: 375px;
   overflow: scroll;
 }
 
 .channelBox::-webkit-scrollbar { 
-    display: none; 
+  display: none;
 }
 
 .tile {
@@ -116,4 +113,14 @@ html {
   margin-left: -37.5%;
   z-index: 10;
   text-align: center;
+}
+
+.videoPlayer .videoTitle {
+  z-index: 15;
+  color: white;
+}
+
+.videoPanel {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
