Add shake to go back 5 seconds on mobile, add time, etc.
Basically add all changes to prepare for complete conversion to ES6 and much more organized structure

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,17 @@ html {
   margin-bottom: 15px;
 }
 
+.times {
+  background-color: black;
+  font-size: 16pt;
+  font-weight: bold;
+  color: white;
+  opacity: .8;
+  margin-left: 0px;
+  position: absolute;
+  margin-top: -64px;
+}
+
 .deleteButton {
   opacity: .8;
   margin-left: 45px;
